webdevelopment/ingress/IngressSrecops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: srecops-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "srecops.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wordpress
            port:
              number: 80
  - host: "www.srecops.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wordpress
            port:
              number: 80
tls:
      - hosts:
        - srecops.com
        secretName: srecops-ssl-secret
