webdevelopment/ingress/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: srecops2-ingress
  #namespace: dev
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - srecops.com
    secretName: srecops-ssl-secret
  rules:
  - host: "srecops.com"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: wordpress
              port:
                number: 80
